@@ -1,3 +1,7 @@
+2007-01-30  Don Allingham  <don@gramps-project.org>
+	* src/ReportBase/_ReportDialog.py: error reporting
+	* src/plugins/NarrativeWeb.py: error reporting
+
 2007-01-30  Alex Roitman  <shura@gramps-project.org>
 	* configure.in: Bump up the version.
 
@@ -8,8 +12,8 @@
 2007-01-29  Benny Malengier  <benny.malengier@ugent.be>
 	* src/DataViews/_PersonView.py: numlock handling
 	* src/PageView.py: numlock handling
-	* src/Filters/_SearchBar.py: numblock handling
-	* src/Filters/SideBar/_SidebarFilter.py: numblock handling
+	* src/Filters/_SearchBar.py: numlock handling
+	* src/Filters/SideBar/_SidebarFilter.py: numlock handling
 
 2007-01-29  Don Allingham  <don@gramps-project.org>
 	* src/DataViews/_PersonView.py: refactoring
